fix z-index

--- a/components/MobileMenu/index.scss
+++ b/components/MobileMenu/index.scss
@@ -1,6 +1,6 @@
 .mobile-menu {
     position: relative;
-    z-index: 100;
+    z-index: 30;
 
     .overlay {
         position: fixed;
