--- a/globals.scss
+++ b/globals.scss
@@ -188,7 +188,7 @@ main {
     align-items: center;
     justify-content: space-between;
     background-color: var(--bg-color);
-	z-index: 100;
+	z-index: 10;
 }
 
 .description {
